Added relevant icon from API

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         </form>
           <h1 id="city"></h1>
           <ul>
-            <li class="li-date">  Last updated:<span class="date" id="date"></span> </li>
-            <li id="description"></li>
+            <li class="li-date">Last updated:<span class="date" id="date"></span> </li>
+            <li id="description" class="description"></li>
           </ul>
         </div>
         <div class="row">
             <div class="col-6">
                 <div class="clearfix weather-temperature">
-                    <img src="https://ssl.gstatic.com/onebox/weather/48/sunny.png" alt="Clear" class="float-left" />
+                    <img src="" alt="" id="icon" class="float-left" />
                     <div class="float-left">
                         <strong id="temperature"></strong><span class="units"><a href="#"
                                 class="active">°C</a> |
