--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-            <div class="overview"><form id="search-form" class="mb-3">
+            <div class="overview">
+            <form id="search-form" class="mb-5">
             <div class="row">
                 <div class="col-9">
                     <input type="search" placeholder="Type a city.." class="form-control" id="city-input" autocomplete="off" />
