--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <img src="" alt="" id="icon" class="float-left" />
                     <div class="float-left">
                         <strong id="temperature"></strong><span class="units"><a href="#"
-                                class="active">°C</a> |
-                            <a href="#" class="active" >°F</a></span>
+                                class="active" id="celsius-link">°C</a> |
+                            <a href="#" class="active" id="fahrenheit-link">°F</a></span>
                     </div>
                 </div>
             </div>
