Added current-date and Updated search-form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 </div>
             </div>
         </form>
+        
           <h1 id="city"></h1>
+        <h6 class="current-date" id="current-date"></h6>
           <ul>
             <li class="li-date">Last updated:<span class="date" id="date"></span> </li>
             <li id="description" class="description"></li>
