--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App - My Final Project (SheCodes-Plus)</title>
+    <title>🌎🌞Weather App - My Final Project (SheCodes-Plus)</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,13 +19,17 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <form id="search-form" class="mb-5">
+            <h4>
+              🌎
+              <span class="header-weather-today">The Weather Today in...</span>
+            </h4>
+            <form id="search-form" class="mb-4">
               <div class="row">
-                <div class="col-9">
+                <div class="col-6">
                   <input
                     type="search"
                     placeholder="Type a city.."
-                    class="form-control"
+                    class="form-control w-80 h-100"
                     id="city-input"
                     autocomplete="off"
                   />
@@ -33,9 +37,17 @@
                 <div class="col-3">
                   <input
                     type="submit"
-                    value="Search"
-                    class="btn btn-info w-100"
+                    value="SEARCH"
+                    class="btn btn-light w-100"
                   />
+                </div>
+                <div class="col-3">
+                  <button
+                    class="btn btn-secondary w-100"
+                    id="current-location-button"
+                  >
+                    CURRENT LOCATION
+                  </button>
                 </div>
               </div>
             </form>
@@ -63,7 +75,7 @@
                 </div>
               </div>
               <div class="col-6">
-                <ul>
+                <ul class="weather-details">
                   <li class="humidity">
                     Humidity: <span id="humidity"></span>%
                   </li>
@@ -72,17 +84,21 @@
               </div>
             </div>
           </div>
+          <h6 class="forecast-per-three-hours">
+            Weather Forecast for every 3 hours:
+          </h6>
+          <div class="row weather-forecast" id="forecast"></div>
         </div>
-      </div>
-      <small class="bottom-text"
-        ><a
-          href="https://github.com/jnasmbrd/my-final-project--shecodes-plus-.git"
-          target="_blank"
-          class="open-source-link"
-          >Open-source code</a
+        <small class="bottom-text"
+          ><a
+            href="https://github.com/jnasmbrd/my-final-project--shecodes-plus-.git"
+            target="_blank"
+            class="open-source-link"
+            >Open-source code</a
+          >
+          by Janice Asumbrado</small
         >
-        by Janice Asumbrado</small
-      >
+      </div>
     </div>
     <script src="src/index.js"></script>
   </body>
