Updated current button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     class="btn btn-secondary w-100"
                     id="current-location-button"
                   >
-                    CURRENT LOCATION
+                    CURRENT
                   </button>
                 </div>
               </div>
