--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 </div>
                 <div class="col-3">
                   <button
+                    type="button"
                     class="btn btn-secondary w-100"
                     id="current-location-button"
                   >
