--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
           </div>
           <h6 class="forecast-per-three-hours">
-            Weather Forecast for every 3 hours:
+            The Weather Forecast for every 3 hours:
           </h6>
           <div class="row weather-forecast" id="forecast"></div>
         </div>
